# gitty-py

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: bandit.yml  ci.yaml  codacy.yml  codeql.yml  dockerbuild.yml  publish.yml  trivy.yml
src/: hello.py
